tests/security/taintThroughChildConstructorCallingGrandParentMethod/output.txt
ERROR: TaintedData - input.hack:20:10 - Detected tainted HTML tags